example/lib/src/l10n/errors/app_cs.arb
{
  "@@locale": "cs",
  "error": "Došlo k chybě",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "Došlo k neočekávané chybě",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "Hlášení o chybě bylo úspěšně odesláno.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}